# flask_netiface

./: LICENSE  README.md  makefile  pyproject.toml  requirements.txt
flask_netiface/: app.py  auth.py  net_interface.py
flask_netiface/static/: style.css
flask_netiface/templates/: auth.html  index.html
