[tool.poetry]
name = "flask-netiface"
version = "0.1.0"
description = "Web GUI for linux 'ip a', 'ip link' etc... command based on Flask and python."
authors = ["Sol 'Entropax' Maxwell <sol@entropax.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "flask_netiface"}]

[tool.poetry.dependencies]
python = "^3.10"
bidict = "0.22.0"
Bootstrap-Flask = "2.1.0"
cachelib = "0.9.0"
click = "8.1.3"
Flask = "2.2.2"
Flask-Caching = "2.0.1"
Flask-SocketIO = "5.3.1"
Flask-WTF = "1.0.1"
itsdangerous = "2.1.2"
Jinja2 = "3.1.2"
MarkupSafe = "2.1.1"
psutil = "5.9.3"
python-engineio = "4.3.4"
python-socketio = "5.7.2"
Werkzeug = "2.2.2"
WTForms = "3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
